--- a/portfolio.html
+++ b/portfolio.html
@@ -38,8 +38,6 @@
       <li> <button type="button" class="button">Дизайн</button></li>
       <li> <button type="button" class="button">Маркетинг</button></li>
     </ul>
-  </section>
-  <section class="projects">
     <h2 class="visually-hidden">Зразки проєктів</h2>
     <ul class="project-list">
       <li>
@@ -49,43 +47,43 @@
       </li>
       <li>
         <img src="./images/pj2.jpg" alt="два баскетболісти грають баскетбол" width="370" height="294">
-        <h3 class="">Постер New Orlean vs Golden Star</h3>
-        <p class="">Дизайн</p>
+        <h3 class="project-name">Постер New Orlean vs Golden Star</h3>
+        <p class="project-type">Дизайн</p>
       </li>
       <li>
        <img src="./images/pj3.jpg" alt="логотип ресторану" width="370" height="294">
-       <h3 class="">Ресторан Seafood</h3>
-       <p class="">Додаток</p>
+       <h3 class="project-name">Ресторан Seafood</h3>
+       <p class="project-type">Додаток</p>
       </li>
       <li>
        <img src="./images/pj4.jpg" alt="чорні великі навушники для прослуховування музики" width="370" height="294">
-       <h3 class="">Проєкт Prime</h3>
-       <p class="">Маркетинг</p>
+       <h3 class="project-name">Проєкт Prime</h3>
+       <p class="project-type">Маркетинг</p>
       </li>
       <li>
        <img src="./images/pj5.jpg" alt="дві коробки" width="370" height="294">
-       <h3 class="">Проєкт Boxes</h3>
-       <p class="">Додаток</p>
+       <h3 class="project-name">Проєкт Boxes</h3>
+       <p class="project-type">Додаток</p>
       </li>
       <li>
        <img src="./images/pj6.jpg" alt="монітор комп'ютера" width="370" height="294">
-       <h3 class="">Inspiration has no Borders</h3>
-       <p class="">Веб-сайт</p>
+       <h3 class="project-name">Inspiration has no Borders</h3>
+       <p class="project-type">Веб-сайт</p>
       </li>
       <li>
         <img src="./images/pj7.jpg" alt="розкритий глянцевий журнал" width="370" height="294">
-       <h3 class="">Видання Limited Edition</h3>
-       <p class="">Дизайн</p>
+       <h3 class="project-name">Видання Limited Edition</h3>
+       <p class="project-type">Дизайн</p>
       </li>
       <li>
        <img src="./images/pj8.jpg" alt="бірка" width="370" height="294">
-       <h3 class="">Проєкт LAB</h3>
-       <p class="">Маркетинг</p>
+       <h3 class="project-name">Проєкт LAB</h3>
+       <p class="project-type">Маркетинг</p>
       </li>
       <li>
        <img src="./images/pj9.jpg" alt="робота за ноутбуком" width="370" height="294">
-       <h3 class="">Growing Business</h3>
-       <p class="">Додаток</p>
+       <h3 class="project-name">Growing Business</h3>
+       <p class="project-type">Додаток</p>
       </li>
     </ul>
   </section>
@@ -97,8 +95,8 @@
     <ul class="footer-list">
       <li> <a href="https://goo.gl/maps/9u5cawYjL2fReU3x6" target="_blank" rel="noopener noreferrer nofollow"
           class="contact"> м. Київ, пр-т Лесі Українки, 26</a> </li>
-      <li><a href="#" class="contact"><span class="contact-rgba">info@devstudio.com</span></a></li>
-      <li><a href="#" class="contact"> <span class="contact-rgba">+38 096 111 11 11</span></a></li>
+      <li><a href="#" class="contact">info@devstudio.com</a></li>
+      <li><a href="#" class="contact"> +38 096 111 11 11 </a></li>
     </ul>
   </address>
 </footer>
