--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
   <address class="address">
     <ul class="footer-list">
       <li> <a href="https://goo.gl/maps/9u5cawYjL2fReU3x6"  target="_blank" rel="noopener noreferrer nofollow" class="contact"> м. Київ, пр-т Лесі Українки, 26</a> </li>
-      <li><a href="#" class="contact"><span class="contact-rgba">info@devstudio.com</span></a></li>
-      <li><a href="#" class="contact"> <span class="contact-rgba">+38 096 111 11 11</span></a></li>
+      <li><a href="#" class="contact">info@devstudio.com</a></li>
+      <li><a href="#" class="contact">+38 096 111 11 11</a></li>
     </ul>
   </address>
 </footer>
